--- a/React/revision/src/App.css
+++ b/React/revision/src/App.css
@@ -32,7 +32,13 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.blank {
+  color: rgb(184, 109, 109);
 }
