--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -3,3 +3,11 @@
 <h2>{{title}}</h2>
 
 <h3>{{name}}</h3>
+
+<h4> {{2*2}} </h4>
+
+<h4>{{x+y}}</h4>
+
+<h4>{{x==y}}</h4>
+
+<h4>{{name.toUpperCase()}}</h4>
