--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -11,3 +11,10 @@
 <h4>{{x==y}}</h4>
 
 <h4>{{name.toUpperCase()}}</h4>
+<app-signup></app-signup>
+<app-login></app-login>
+
+<h2>Hello Heading 2</h2>
+<app-login></app-login>
+
+<div></div>
