Function call on button click

--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,20 +1,2 @@
-<h1> Angular</h1>
-
-<h2>{{title}}</h2>
-
-<h3>{{name}}</h3>
-
-<h4> {{2*2}} </h4>
-
-<h4>{{x+y}}</h4>
-
-<h4>{{x==y}}</h4>
-
-<h4>{{name.toUpperCase()}}</h4>
-<app-signup></app-signup>
-<app-login></app-login>
-
-<h2>Hello Heading 2</h2>
-<app-login></app-login>
-
-<div></div>
+<h1>Angular</h1>
+<button (click)="handleClickEvent()"> Click Me</button>
