--- a/Angular/practice/src/app/app.component.css
+++ b/Angular/practice/src/app/app.component.css
@@ -1,4 +1,4 @@
-.btn {
+/* .btn {
     height: 100px;
     width: 100px;
     border-radius: 50%;
@@ -30,4 +30,4 @@
     padding: 14px;
     background: grey;
     border-radius: 20px;
-}
+} */
