--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,7 +1,6 @@
 <h1>Counter App</h1>
-<div style="text-align: center;">
-    <h2 class="count">{{count}}</h2>
-    <button (click)="handleCounter('+')" class="btn bg-green"> Increment+ </button>
-    <button (click)="handleCounter('')" class="btn bg-brown"> Reset </button>
-    <button (click)="handleCounter('-')"  class="btn bg-red"> Decrement- </button>
-</div>
+<button class="btn" name="btn-name" (click)="handleEvent($event)"> Click Me</button>
+
+<div (mouseenter)="handleEvent($event)" style="background: green; height: 100px; width: 100px;"> </div>
+<div (mouseleave)="handleEvent($event)" style="background: blue; height: 100px; width: 100px;"></div>
+<input (focus)="handleEvent($event)" (input)="handleEvent($event)" type="text" name="username">
