--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,6 +1,13 @@
-<h1>Counter App</h1>
-<button class="btn" name="btn-name" (click)="handleEvent($event)"> Click Me</button>
+<h1>User Is: {{displayName}}</h1>
 
-<div (mouseenter)="handleEvent($event)" style="background: green; height: 100px; width: 100px;"> </div>
-<div (mouseleave)="handleEvent($event)" style="background: blue; height: 100px; width: 100px;"></div>
-<input (focus)="handleEvent($event)" (input)="handleEvent($event)" type="text" name="username">
+<input type="text" value="{{name}}" (input)="getName($event)" placeholder="Enter Your Name" />
+<br><br>
+<button (click)="showName()"> Get Data</button>
+<button (click)="nameSet()"> Set Data</button>
+
+<hr>
+
+<h1>Email: {{email}}</h1>
+<input type="text" value="{{email}}" placeholder="Enter Email" #emailfield>
+<button (click)="getEmail(emailfield.value)">Get Email</button>
+<button (click)="setEmail()">Set Email</button>
