--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,17 +1,31 @@
-<h2> Else If | Control Flow</h2>
+<h2> Switch Case in Angular</h2>
 
-<button (click)="handleColor(1)">Red</button>
-<button (click)="handleColor(2)">Blue</button>
-<button (click)="handleColor(3)">Yellow</button>
-<button (click)="handleColor(0)">Black</button>
-<input type="text" (input)="handleInput($event)" placeholder="Enter Color Number">
+<button (click)="handleColor('red')"> Red </button>
+<button (click)="handleColor('green')"> Green </button>
+<button (click)="handleColor('yellow')"> yellow </button>
+<button (click)="handleColor('blue')"> Blue </button>
+<button (click)="handleColor('black')"> No Color </button>
+<input type="text" (input)="handleInput($event)" placeholder="Enter Color">
 
-@if(color == 1){
-<div style=" height: 50px; width:100px; background-color: red; margin: 2px;;"></div>
-}@else if(color == 2){
-<div style="height: 50px; width:100px; background-color: blue;"></div>
-}@else if(color == 3){
-<div style="height: 50px; width:100px; background-color: yellow;"></div>
-}@else{
-<div style="height: 50px; width:100px; background-color: black;"></div>
+@switch(color){
+
+@case('red'){
+<h2 style="color:red;">Red Color</h2>
+
+}
+@case('green'){
+<h2 style="color:green;"> Green Color </h2>
+
+}
+@case('yellow'){
+<h2 style="color:yellow;"> Yellow Color</h2>
+
+}
+@case('blue'){
+<h2 style="color:blue;"> Blue Color</h2>
+
+}
+@default{
+<h2 style="color:black;"> No Color Match </h2>
+}
 }
