--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h2> Signals </h2>
+<h2> Computed Signals </h2>
 
-<h4> {{count()}}</h4>
-
-<button (click)="count.set(count() + 1)"> Increment </button>
-<button (click)="count.set(count() - 1)"> Decrement </button>
+{{z()}}
+<button (click)="showValue()">Show Value</button>
+<button (click)="updateX()"> Update X</button>
