--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,9 +1,8 @@
-<h1> Effect </h1>
+<h1> For Loop Contextual Variables </h1>
 
-<h2> {{count()}} </h2>
-
-<button (click)="headingHandle()"> Update User Name</button>
-
-@if(displayHeading){
-<h3 style="background-color:green"> Display</h3>
+@for(user of users; track user; let i = $index; let f = $first; let l = $last){
+<h2> For loop body</h2>
+}
+@empty(){
+<h2> Body of empty block </h2>
 }
