--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,4 +1,12 @@
-<h1> Two Way Binding </h1>
+<h3> To Do List</h3>
 
-<input [(ngModel)]='name' placeholder="Enter Name">
-<h2> {{name}} </h2>
+<input type="text" [(ngModel)]="task" placeholder="Enter New Task">
+<button (click)="addTask()">Add Task</button>
+
+@for(task of taskList; track task.id){
+<ul>
+    <li>{{task.id}}</li>
+    <li>{{task.task}}</li>
+    <li><button (click)="deleteTask(task.id)">Delete</button></li>
+</ul>
+}
