--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h2 [style.backgroundColor]="bgColor" [style.fontSize]="zoom ? '100px' : '20px'"> Dynamic Styling
-</h2>
-
-<button (click)="UpdateFont()"> Toggle Font </button>
+<h3 *ngIf="show"> Heading Tag </h3>
