--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,14 +1,2 @@
-<h3> Routing </h3>
-
-<ul>
-    <li>
-        <a routerLink="/login"> Login </a>
-    </li>
-    <li>
-        <a routerLink="/about"> About </a>
-    </li>
-    <li>
-        <a routerLink="/contact"> Contact </a>
-    </li>
-</ul>
+<app-header></app-header>
 <router-outlet />
