Data passing between pages/components

--- a/Angular/practice/src/app/home/home.component.html
+++ b/Angular/practice/src/app/home/home.component.html
@@ -1,1 +1,8 @@
 <p>home works!</p>
+
+<!-- <a [routerLink]="['profile',{name:'Peter'}]"> Go To Profile</a> -->
+
+<!-- <button (click)="goToProfile('Rajib')"> Go To Profile</button>
+<button (click)="goToProfile('Peter')"> Go To Profile</button> -->
+
+<a routerLink="profile"> Go to Profile</a>
