--- a/Angular/practice/src/app/home/home.component.html
+++ b/Angular/practice/src/app/home/home.component.html
@@ -1,8 +1,7 @@
-<p>home works!</p>
+<h3> Users List</h3>
 
-<!-- <a [routerLink]="['profile',{name:'Peter'}]"> Go To Profile</a> -->
-
-<!-- <button (click)="goToProfile('Rajib')"> Go To Profile</button>
-<button (click)="goToProfile('Peter')"> Go To Profile</button> -->
-
-<a routerLink="profile"> Go to Profile</a>
+<ul>
+    @for(user of users; track user.id){
+    <li> <a routerLink='user/{{user.id}}/{{user.name}}'>{{user.name}} </a> </li>
+    }
+</ul>
