--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,2 +1,22 @@
-<app-header></app-header>
-<router-outlet />
+<h3> Template Driven Forms </h3>
+
+<form #userForm="ngForm" (ngSubmit)="addDetails(userForm.value)">
+    <input type="text" name="name" ngModel>
+    <br><br>
+    <input type="text" name="password" ngModel>
+    <br><br>
+    <select name="gender" ngModel>
+        <option value=""> Select Gender </option>
+        <option value="male"> Male</option>
+        <option value="female"> Female </option>
+    </select>
+    <br><br>
+    <input type="range" name="range" min="17" max="30" ngModel>
+    <br><br>
+    <button>Add User</button>
+</form>
+
+<h3>{{userDetail?.name}} </h3>
+<h3>{{userDetail?.password}} </h3>
+<h3>{{userDetail?.gender}} </h3>
+<h3>{{userDetail?.range}} </h3>
