--- a/Angular/practice/src/app/user/user.component.html
+++ b/Angular/practice/src/app/user/user.component.html
@@ -1,1 +1,3 @@
-<h2> User Name: {{user}} </h2>
+<h3> User Works Here </h3>
+<button (click)="getUsers.emit(this.users)"> Pass Data 1 </button>
+<button (click)="LoadData()"> Pass Data 2 </button>
