--- a/Angular/practice/src/app/app.component.html
+++ b/Angular/practice/src/app/app.component.html
@@ -1,21 +1,4 @@
-<h1> Pipes in Angular </h1>
-
-<h2> {{title}} </h2>
-
-<h2> {{title | uppercase}} </h2>
-
-<h2> {{title | titlecase }} </h2>
-
-<h2> {{name | lowercase}}</h2>
-
-<h2> {{date | date:'fullDate'}} </h2>
-
-<h2> {{date | date:'hh:mm:ss'}}</h2>
-
-<h2> {{amount | currency}} </h2>
-
-<h2> {{amount | currency:'EUR'}} </h2>
-
-<h2> {{amount | currency:'INR'}} </h2>
-
-<h2> {{date | date:'fullDate' | uppercase}} </h2>
+<h1> Custom Pipes in Angular</h1>
+<h2>{{amount | currencyConverter}} </h2>
+<h2>{{amount | currencyConverter:12}} </h2>
+<h2>{{50 | currencyConverter:45}} </h2>
